<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ndt_localizer</name>
    <version>1.7.0</version>
    <description>The ndt_localizer package ported to ROS2</description>
    <maintainer email="shenzb12@lzu.edu.cn">adam shan</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>pcl_ros</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>tf2_eigen</depend>
    <depend>rosidl_default_generators</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>diagnostic_msgs</depend>
    <depend>small_gicp</depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
